# scraper-filmes

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW_SUGGESTIONS.md  Dockerfile  README.md  TESTING_PLAN.md  TEST_SUITE_UPDATE_SUMMARY.md  comandola_filmes-deployment.yaml  data.csv  data.db  docker-compose.yaml  docker_deploy.py  explain_imports.md  hello.py  ingest_into_database.bat  insert_to_database.py  logical_database.xopp  main.py  movie_database.db  movies.json  movies_gratis.json  notepad.txt  prefect-docker-container.yaml  prefect.yaml  prefect_flow_se.py  pyproject.toml  remove_json.bat  remove_json.py  requirements.txt  ruff.toml  run_comando.py  run_flow.py  run_gratis.py  send_email.bat  send_top_films.py  test_import.py  test_logging.py  (+1 more)
.github/workflows/: ci.yaml
.serena/: project.yml
agent/: Dockerfile  docker-compose.yaml
config/: prefect.yaml
dbs/: movie_database.db
deploy/: Dockerfile  docker-requirements.txt  docker_deploy.py
docs/: BIGQUERY_SETUP.md  CLAUDE.md  PREFECT_DEPLOYMENT.md  TEST_TRACKING.md
filmes/: Script.sql  comandola_filmes-deployment.yaml  f.csv  f.json  filmes.json  insert_to_database.py  movie_database.db  novos.json  prefect_flow.py  prefect_flow_se.py  results.json  run.bat  scrapy.cfg
filmes/dbs/: default.db
filmes/filmes/: items.py  middlewares.py  pipelines.py  settings.py
filmes/filmes/spiders/: scraper_filmes.py
filmes/send_email/: send_email.py
gratis_torrent/: Dockerfile  dag.py  extract.py  movies_gratis.json  prefect.yaml  schema.json  send_to_bq.py
openspec/changes/add-comprehensive-test-coverage/: design.md  proposal.md  tasks.md
openspec/changes/fix-github-actions-uv-cache/: proposal.md  tasks.md
openspec/changes/integrate-loguru-prefect-logs/: design.md  proposal.md  tasks.md
openspec/changes/prefect-gcp-deployment-setup/: design.md  proposal.md  tasks.md
openspec/changes/refactor-module-best-practices-tdd/: design.md  proposal.md  tasks.md
scrapers/: __init__.py
scrapers/comando_torrents/: __init__.py  config.py  flow.py  main.py  parser.py  scraper.py
scrapers/gratis_torrent/: README.md  __init__.py  bigquery_client.py  config.py  flow.py  http_client.py  models.py  parser.py  schema.json  scraper.py
scrapers/tests/: README.md  conftest.py  test_suite.py
scrapers/tests/fixtures/: comando_html.py  gratis_html.py  mock_responses.py  test_data.py
scrapers/tests/integration/: test_bigquery.py  (+2 more)
scrapers/utils/: __init__.py  constants.py  data_quality.py  exceptions.py  logging_config.py  models.py  monitoring.py  parse_utils.py  rate_limiter.py  send_mail.py
scripts/: deploy_prefect.sh  recreate_bigquery_tables.py  test_bigquery.py  test_gratis_torrent_scraper.py  teste_bigquery.py
send_email/: send_email.py
src/database/: insert_to_database.py
src/flows/: prefect_flow_gratis.py
src/utils/: models.py
tests/: MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py  run_suite.py  test_deployment_config.py  test_suite.py
tests/scrapers/: __init__.py
(+63 files in other folders)
