[project]
name = "scraper-filmes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dateparser>=1.2.0",
    "google-cloud-bigquery>=3.29.0",
    "loguru>=0.7.3",
    "nodriver>=0.38.post1",
    "pandas>=2.3.3",
    "pip>=25.2",
    "playwright-stealth>=2.0.0",
    "prefect>=3.1.15",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scrapy>=2.12.0",
    "scrapy-playwright>=0.0.44",
    "scrapy-rotating-proxies>=0.6.2",
    "sqlalchemy>=2.0.37",
    "tabulate>=0.9.0",
    "undetected-chromedriver>=3.5.5",
    "yagmail[all]>=0.15.293",
]
