[project]
name = "scraper-filmes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "diskcache>=5.6.3",
    "google-cloud-bigquery>=3.29.0",
    "keyring>=25.7.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "prefect>=3.1.15",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scrapling[fetchers]>=0.3.7",
    "selectolax>=0.4.0",
    "sqlalchemy>=2.0.37",
    "tenacity>=9.1.2",
    "yagmail>=0.15.293",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "types-requests>=2.32.4.20250913",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["scrapers/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=scrapers",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Ignore missing imports for third-party packages without type stubs
[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "diskcache.*",
    "google.cloud.*",
    "scrapling.*",
    "selectolax.*",
    "yagmail.*",
]
ignore_missing_imports = true
